<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="support">Написать в поддержку</string>
    <string name="share">Поделиться приложением</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_link">https://practicum.yandex.ru/profile/android-developer/?from=profile_subscriptions-with-prof-recommendations</string>
    <string name="support_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_adress">vadinload56@gmail.com</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="you_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="errors_connection">Проблемы со связью</string>
    <string name="cheack_connection">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="error_no_preview_url">Нет ссылки на превью трека</string>
    <string name="empty_tracks">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали ни одного плейлиста</string>
    <string name="favorites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <plurals name="track_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <string name="stop_creating_playlist">Завершить создание плейлиста?</string>
    <string name="unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="finish_creating">"Завершить создание плейлиста?"</string>
    <string name="unsaved">"Все несохраненные данные будут потеряны"</string>
    <plurals name="minutes_count">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <string name="empty_playlist">В этом плейлисте ещё нет треков</string>
    <string name="delete_track_title">Хотите удалить трек?</string>
    <string name="delete_playlist_title">Хотите удалить плейлист?</string>
    <string name="no">нет</string>
    <string name="yes">да</string>
    <string name="share_playlist">Поделиться</string>
    <string name="change_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <string name="delete_playlist_message">Если есть сообщение</string>
</resources>