<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    style="@style/AllBackground">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/player_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guidleine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.06"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guidline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.06"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guidline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.94"/>

        <ImageView
            android:id="@+id/artwork"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="@id/left_guidline"
            app:layout_constraintTop_toTopOf="@id/top_guidleine"
            app:layout_constraintEnd_toEndOf="@id/right_guidline"/>

        <TextView
            android:id="@+id/track_name"
            style="@style/SearchTextStyle"
            android:layout_marginTop="24dp"
            android:textSize="22sp"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintStart_toEndOf="@id/left_guidline"
            app:layout_constraintEnd_toStartOf="@id/right_guidline"
            app:layout_constraintTop_toBottomOf="@id/artwork" />

        <TextView
            android:id="@+id/artist_name"
            style="@style/SearchTextStyle"
            android:textSize="14sp"
            android:layout_marginTop="12dp"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintEnd_toStartOf="@id/right_guidline"
            app:layout_constraintStart_toEndOf="@id/left_guidline"
            app:layout_constraintTop_toBottomOf="@id/track_name"/>

        <ImageView
            android:id="@+id/add_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            app:layout_constraintStart_toStartOf="@id/left_guidline"
            app:layout_constraintEnd_toStartOf="@id/play_btn"
            app:layout_constraintTop_toBottomOf="@id/artist_name"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:src="@drawable/left_btn"/>

        <ImageView
            android:id="@+id/play_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toStartOf="@id/favorite_btn"
            app:layout_constraintStart_toEndOf="@id/add_playlist"
            app:layout_constraintTop_toBottomOf="@id/artist_name"
            android:src="@drawable/play_btn"/>

        <ImageView
            android:id="@+id/favorite_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            app:layout_constraintStart_toEndOf="@id/play_btn"
            app:layout_constraintEnd_toEndOf="@id/right_guidline"
            app:layout_constraintTop_toBottomOf="@id/artist_name"
            android:src="@drawable/favorite_btn"/>

        <TextView
            android:id="@+id/track_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SearchTextStyle"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@id/left_guidline"
            app:layout_constraintTop_toBottomOf="@id/play_btn"
            app:layout_constraintEnd_toStartOf="@id/right_guidline"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/texts_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.38" />

        <TextView
            android:id="@+id/label_duration"
            style="@style/SearchBottomTextStyle"
            android:textSize="13sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:layout_marginTop="50dp"
            android:layout_marginStart="-8dp"
            app:layout_constraintStart_toEndOf="@id/left_guidline"
            app:layout_constraintEnd_toStartOf="@id/texts_guideline"
            app:layout_constraintTop_toBottomOf="@id/play_btn" />

        <TextView
            android:id="@+id/value_duration"
            style="@style/SearchTextStyle"
            android:textSize="13sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:layout_marginEnd="-8dp"
            app:layout_constraintStart_toEndOf="@id/texts_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guidline"
            app:layout_constraintTop_toBottomOf="@id/play_btn"
            app:layout_constraintBaseline_toBaselineOf="@id/label_duration" />

        <TextView
            android:id="@+id/label_album"
            style="@style/SearchBottomTextStyle"
            android:textSize="13sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/album"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:layout_marginStart="-8dp"
            app:layout_constraintStart_toEndOf="@id/left_guidline"
            app:layout_constraintEnd_toStartOf="@id/texts_guideline"
            app:layout_constraintTop_toBottomOf="@id/label_duration"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/value_album"
            style="@style/SearchTextStyle"
            android:textSize="13sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginEnd="-8dp"
            app:layout_constraintStart_toEndOf="@id/texts_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guidline"
            app:layout_constraintBaseline_toBaselineOf="@id/label_album" />

        <TextView
            android:id="@+id/label_year"
            style="@style/SearchBottomTextStyle"
            android:textSize="13sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:layout_marginStart="-8dp"
            app:layout_constraintStart_toEndOf="@id/left_guidline"
            app:layout_constraintEnd_toStartOf="@id/texts_guideline"
            app:layout_constraintTop_toBottomOf="@id/label_album"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/value_year"
            style="@style/SearchTextStyle"
            android:textSize="13sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:layout_marginEnd="-8dp"
            app:layout_constraintStart_toEndOf="@id/texts_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guidline"
            app:layout_constraintBaseline_toBaselineOf="@id/label_year" />

        <TextView
            android:id="@+id/label_genre"
            style="@style/SearchBottomTextStyle"
            android:textSize="13sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:layout_marginStart="-8dp"
            app:layout_constraintStart_toEndOf="@id/left_guidline"
            app:layout_constraintEnd_toStartOf="@id/texts_guideline"
            app:layout_constraintTop_toBottomOf="@id/label_year"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/value_genre"
            style="@style/SearchTextStyle"
            android:textSize="13sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:layout_marginEnd="-8dp"
            app:layout_constraintStart_toEndOf="@id/texts_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guidline"
            app:layout_constraintBaseline_toBaselineOf="@id/label_genre" />

        <TextView
            android:id="@+id/label_country"
            style="@style/SearchBottomTextStyle"
            android:textSize="13sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:layout_marginStart="-8dp"
            app:layout_constraintStart_toEndOf="@id/left_guidline"
            app:layout_constraintEnd_toStartOf="@id/texts_guideline"
            app:layout_constraintTop_toBottomOf="@id/label_genre"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/value_country"
            style="@style/SearchTextStyle"
            android:textSize="13sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginEnd="-8dp"
            app:layout_constraintStart_toEndOf="@id/texts_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guidline"
            app:layout_constraintBaseline_toBaselineOf="@id/label_country" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/playlists_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_bg"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/dashed_border" />

        <TextView
            style="@style/MediaFragmentTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/add_to_playlist" />

        <Button
            android:id="@+id/btn_new_playlist_bs"
            style="@style/ErrorEnternetButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:text="@string/new_playlist" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_playlists_bs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>